--- a/My_portfolio/src/App.css
+++ b/My_portfolio/src/App.css
@@ -1,5 +1,3 @@
-
-
 /* Define theme variables */
 :root {
   --base-color: #ffffff;
@@ -8,7 +6,7 @@
 }
 
 [data-theme="dark"] {
-  --base-color: #121212;
+  --base-color: #1F2937;
   --text-color: #f2f2f2;
   --accent-color: #503050;
 }
@@ -20,7 +18,15 @@ body {
   color: #121212; /* Fallback for older browsers */
   color: var(--text-color);
   transition: background-color 0.3s, color 0.3s;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
 }
+
+.dark {
+  @apply bg-gray-800;
+}
+
 
 a {
   color: var(--accent-color);
@@ -63,6 +69,18 @@ a {
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --base-color: #1F2937;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --base-color: #ffffff;
+  }
+}
+
 .card {
   padding: 2em;
 }
@@ -70,5 +88,3 @@ a {
 .read-the-docs {
   color: #888;
 }
-
-
