--- a/My_portfolio/src/App.css
+++ b/My_portfolio/src/App.css
@@ -10,59 +10,46 @@
   --base-color: #1F2937;
   --text-color: #f2f2f2;
   --accent-color: #503050;
-  
 }
-/* cursor styles */
-.cursor-dot{
+
+/* Global styles */
+* {
+  cursor: none;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: var(--base-color);
+  color: var(--text-color);
+  transition: background-color 0.3s, color 0.3s;
+  width: 100vw;
+}
+
+/* Cursor styles */
+.cursor-dot {
   width: 5px;
   height: 5px;
   border-radius: 50%;
   background-color: var(--text-color);
-
-}
-.cursor-outline{
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
-  border: 2px solid var(--text-color);
-}
-.cursor-dot,
-.cursor-outline{
   position: fixed;
   transform: translate(-50%, -50%);
   pointer-events: none;
   z-index: 1;
 }
-/* Apply variables */
-body {
-  background-color: #ffffff;/*fallback for older browsers*/
-  background-color: var(--base-color);
-  color: #121212; /* Fallback for older browsers */
-  color: var(--text-color);
-  transition: background-color 0.3s, color 0.3s;
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  cursor: none; 
+
+.cursor-outline {
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  border: 2px solid var(--text-color);
+  position: fixed;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  z-index: 1;
 }
 
-.dark {
-  @apply bg-gray-800;
-   .cursor-dot{
-    background-color: #f2f2f2;
-   }
-   .cursor-outline{
-    background-color: #f2f2f2;
-   }
-}
-
-
-a {
-  color: var(--accent-color);
-}
-
-
-
+/* Layout styles */
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -70,19 +57,23 @@ a {
   text-align: center;
 }
 
+/* Component styles */
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+/* Animations */
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -98,6 +89,7 @@ a {
   }
 }
 
+/* Theme styles */
 @media (prefers-color-scheme: dark) {
   :root {
     --base-color: #1F2937;
@@ -110,28 +102,7 @@ a {
   }
 }
 
-.cursor-dot,
-.cursor-outline {
-  transition: background-color 0.3s ease-in-out;
-}
-
-@media (prefers-color-scheme: dark) {
-  .cursor-dot{
-    background-color: #fff;
-  }
-  .cursor-outline{
-    border:  1px solid #fff;
-    box-shadow:  0 0 0 2px #fff;
-  }
-}
-.card {
-  padding: 2em;
-}
-/* might be delete-able */
-.read-the-docs {
-  color: #888;
-}
-
+/* Dark theme styles */
 body[data-theme="dark"] input {
   color: #ffffff !important;
   caret-color: #ffffff !important;
@@ -148,4 +119,13 @@ body[data-theme="dark"] textarea {
 
 body[data-theme="dark"] textarea:focus {
   border-color: #ffffff !important;
+}
+
+/* Miscellaneous styles */
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
 }
